fix: Added focus when visible for the Alert

--- a/src/alert/styles.scss
+++ b/src/alert/styles.scss
@@ -2,6 +2,7 @@
  Copyright Amazon.com, Inc. or its affiliates. All Rights Reserved.
  SPDX-License-Identifier: Apache-2.0
 */
+
 @use 'sass:map';
 @use '../internal/styles/tokens' as awsui;
 @use '../internal/styles' as styles;
@@ -13,10 +14,12 @@
   @include styles.styles-reset;
   @include styles.text-flex-wrapping;
   display: block;
+
   &.hidden {
     display: none;
   }
 }
+
 .alert {
   @include styles.styles-reset;
   position: relative;
@@ -40,6 +43,7 @@
   flex-wrap: wrap;
   column-gap: awsui.$space-alert-action-left;
 }
+
 .hidden {
   display: none;
 }
@@ -48,24 +52,32 @@
   overflow: hidden;
   block-size: 0;
 }
+
 .header,
 .header-replacement {
   font-weight: styles.$font-weight-bold;
 }
+
 .action {
   white-space: nowrap;
 }
+
 .action-slot,
 .action-button {
   /* used in test-utils */
 }
+
 .alert-focus-wrapper {
   flex: 1;
   min-inline-size: 70%;
   display: grid;
   grid-template-columns: min-content auto;
+
   &:focus {
     outline: none;
+  }
+  @include focus-visible.when-visible {
+    @include styles.focus-highlight(awsui.$space-button-focus-outline-gutter);
   }
 }
 
@@ -83,9 +95,11 @@
     margin-inline-end: awsui.$space-alert-message-right;
   }
 }
+
 .action-wrapped {
   margin-block-end: awsui.$space-xxs;
 }
+
 .icon-size-medium > .alert-wrapper > .action-wrapped {
   margin-inline-start: calc(#{awsui.$size-icon-medium} + #{awsui.$space-xs});
 }
@@ -95,35 +109,42 @@
 .icon-size-normal > .alert-wrapper > .action-wrapped {
   margin-inline-start: calc(#{awsui.$size-icon-normal} + #{awsui.$space-xs});
 }
+
 .content,
 .content-replacement {
   /* used in test-utils */
 }
+
 .dismiss {
   margin-inline-end: calc(-1 * #{awsui.$space-xxs});
   margin-inline-start: awsui.$space-s;
 }
+
 .dismiss-button {
   /* used in test-utils */
 }
+
 $_border-colors: (
   'error': awsui.$color-border-status-error,
   'warning': awsui.$color-border-status-warning,
   'success': awsui.$color-border-status-success,
   'info': awsui.$color-border-status-info,
 );
+
 $_background-colors: (
   'error': awsui.$color-background-status-error,
   'warning': awsui.$color-background-status-warning,
   'success': awsui.$color-background-status-success,
   'info': awsui.$color-background-status-info,
 );
+
 $_text-colors: (
   'error': awsui.$color-text-status-error,
   'warning': awsui.$color-text-status-warning,
   'success': awsui.$color-text-status-success,
   'info': awsui.$color-text-status-info,
 );
+
 @each $type in map.keys($_text-colors) {
   .type-#{$type} {
     border-color: #{map.get($_border-colors, $type)};
